some styling staff

--- a/src/app/components/bpmn/bpmn.component.html
+++ b/src/app/components/bpmn/bpmn.component.html
@@ -4,6 +4,6 @@
 <button (click)="exportJson()">save json</button>
 <button (click)="readJson()">load json</button>
 
-<div>
+<div class="bpmn-container">
   <ng-bpmn type="modeler" #editor></ng-bpmn>
 </div>
