--- a/src/app/components/dmn/dmn.component.html
+++ b/src/app/components/dmn/dmn.component.html
@@ -1,2 +1,4 @@
-<div id="container"></div>
-<div id="properties-panel-container"></div>
+<div class="t">
+  <div id="container"></div>
+  <div id="properties-panel-container"></div>
+</div>
